onboarding tour improvements

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Beyond Rule 4 - YNAB and Financial Independence (FIRE)</title>
+    <title>fastFIREward - YNAB and Financial Independence (FIRE)</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,7 +19,7 @@
       sizes="180x180"
       href="assets/apple-touch-icon.png"
     />
-    <meta name="apple-mobile-web-app-title" content="Beyond Rule 4" />
+    <meta name="apple-mobile-web-app-title" content="fastFIREward" />
     <link rel="manifest" id="manifest-placeholder" />
     <link
       rel="stylesheet"
